# sysmon-rs

./: Cargo.toml  Dockerfile  Makefile  out.txt
src/: main.rs
src/cli_args/: cli_args.rs
src/config/: constants.rs  mod.rs
src/sysmon_loop/: mod.rs  sysmon_loop.rs
src/util/: timer.rs
