[package]
name = "sysmon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio = ["tokio/time"]

[dependencies]
sysinfo = "0.30.5"
timer = "0.2.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
